# bf_helper

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
conan_profile/: android-armv7  android-armv8  default  ios_sim  linux_arm  mac_catalyst
docs/: about_interface.md  cmake_detail_setting.md  feature_note.md  how_to_create_conan_package.md  learn_from_sdk.md
src/: CMakeLists.txt  bf_functions.cpp  bf_functions.h  bf_helper.cpp  bf_helper.h  bf_object.cpp  bf_object.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp
